# My-PetProjects

./: .gitignore  LICENSE  pip_install.py  pip_install_deepseek.py  pipy.py  pyproject.toml  requirements.txt  test_processing.py
.github/workflows/: ci.yml
example/: chunk_game.py  create_phantom_file.py  ctk.py  ctk_OOP.py  ctk_app.py  ctk_fullscreen.py  ctk_fullscreen_OOP.py  ctk_tabs.py  custom_progress_bar.py  github_api.md  github_api.py  redis_bd.py  sql_bd.py
example/obsidian-tools/: .settings.dist  __main__.py  pyproject.toml
finished/: gui_XO.py  login.py  old_gui_XO.py  telegram_bot_with_api.py
finished/custom/: main.py  pyproject.toml  test.py  utils.py
finished/python-socket-io-chat/: index.html  main.py
finished/terminal/: deepseek_openrouter.example.settings  deepseek_openrouter.settings  deepseek_with_openrouter.py  magic_numbers.py  neiro_1.py  sudoku.py  tic-tac-toe.py  tic-tac-toe_solver.py  tic_tac_toe_plus.py
function/: algorithms.py  bomber.py  debugging.py  my_types.py  send_email.py  test_turbo_print.py  turbo_print.py
function/Turbo-Print/: levels.py  logger.py
function/Turbo-Print/filters/: base.py
function/Turbo-Print/formatters/: simple.py
function/Turbo-Print/handlers/: base.py  database.py  stream.py  telegram.py
test/: new.json  old.json  test.py
unfinished/: pyproject.toml
unfinished/MYFINANCE/: add_trans.py  data.json  delete_trans.py  edit_trans.py  graph.py  main.py  sorting.py  test_graph.py
unfinished/SHOPS/: archiver.py  main.py  pyproject.toml
unfinished/SHOPS/SHOP_TEST/: button.py  data.json  frame.py  main.py  products.json
unfinished/SHOPS/SHOP_V1/: button.py  data.json  main.py  products.json  products.py
unfinished/SHOPS/SHOP_V2/: button.py  data.json  frame.py  main.py  products.json  reader.py  registration.py  widget.py
unfinished/SHOPS/SHOP_latest/: configure.ini  example_registration.py  main.py  no_registration.py  reader.py  registration.py  tree.txt  writer.py
unfinished/SHOPS/SHOP_latest/json/: data.json
unfinished/Telebot-Games-Parser-main/src/: constants.py
unfinished/casino_telegram_bot-master/: settings.py
unfinished/finance-bot/: .env.example  .gitignore  000_config.yaml  pyproject.toml
unfinished/finance-bot/src/: __init__.py  main.py  models.py  settings.py
unfinished/finance-bot/src/turbo_print/: config_manager.py  levels.py  logger.py  record.py
unfinished/finance-bot/src/turbo_print/filters/: base.py  composite.py  level.py  regex.py  time.py
unfinished/finance-bot/src/turbo_print/formatters/: base.py  simple.py
unfinished/finance-bot/src/turbo_print/handlers/: database.py  logging.py  stream.py  telegram.py
unfinished/finance-bot/src/turbo_print/middlewares/: base.py
unfinished/telegram_bot/: __main__.py  config.py
unfinished/telegram_bot/bot_types/: bot.py
